# slurmit

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  SPEC.md  pyproject.toml
myjob/: __init__.py
myjob/backend/: __init__.py  slurm.py
myjob/cli/: __init__.py  main.py
myjob/cli/commands/: __init__.py  init.py  logs.py  nodes.py  reproduce.py  run.py  status.py  submit.py
myjob/core/: __init__.py  config.py  job_id.py  metadata.py  models.py
myjob/monitor/: __init__.py  logs.py  nodes.py  status.py
myjob/storage/: job_store.py
myjob/transport/: git_sync.py  rsync.py  ssh.py
slurmit/: __init__.py
slurmit/backend/: slurm.py
slurmit/cli/: __init__.py  main.py
slurmit/cli/commands/: __init__.py  init.py  jobs.py  logs.py  nodes.py  reproduce.py  run.py  status.py  submit.py
slurmit/core/: config.py  job_id.py  metadata.py  models.py
slurmit/monitor/: logs.py  nodes.py  status.py
slurmit/storage/: __init__.py  job_store.py
slurmit/transport/: __init__.py  git_sync.py  rsync.py  ssh.py
tests/: __init__.py
